Created a Model for Negociacao

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
     </table>
     
     <script src="js/index.js"></script>
+    <script src="js/app/models/Negociacao.js"></script>
+
+    <script type="text/javascript">
+        var n1 = new Negociacao(new Date(), 5, 300);
+        console.log(n1.volume);
+        console.log(n1.data);
+        console.log(n1.quntidade);
+        console.log(n1.valor);
+    </script>
 
 </body>
 </html>
