--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <script src="js/app/views/MensagemView.js"></script>
     
     <script src="js/app/helpers/DateHelper.js"></script>
+    <script src="js/app/services/ProxyFactory.js"></script>
 
     <script type="text/javascript">
         let negociacaoController = new NegociacaoController();
