--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <script src="js/app/helpers/DateHelper.js"></script>
     <script src="js/app/helpers/Bind.js"></script>
     <script src="js/app/services/ProxyFactory.js"></script>
+    <script src="js/app/services/NegociacaoService.js"></script>
 
     <script type="text/javascript">
         let negociacaoController = new NegociacaoController();
